# ChangeLog for app-editors/hexedit
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/ChangeLog,v 1.9 2004/04/13 16:24:06 zul Exp $

*hexedit-1.2.9 (13 Apr 2004)

  13 Apr 2004; Chuck Short <zul@gentoo.org> hexedit-1.2.9.ebuild:
  Version bump, closes #47357.

  18 Jan 2004; Chuck Short <zul@gentoo.org> hexedit-1.2.2.ebuild:
  Header update, added amd64 keyword.

  21 May 2003; Tavis Ormandy <taviso@gentoo.org> hexedit-1.2.2.ebuild:
  looks good on alpha.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*hexedit-1.2.2 (14 Feb 2002)

  06 Aug 2002; Mark Guertin <gerk@gentoo.org> :
  Added ppc to keywords

  14 Feb 2002; Arcady Genkin <agenkin@thpoon.com> hexedit-1.2.2.ebuild :

  First version of the package, submitted by Marc Soda.