@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/hexedit
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/ChangeLog,v 1.9 2004/04/13 16:24:06 zul Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/hexedit/ChangeLog,v 1.10 2004/06/07 01:46:19 dragonheart Exp $
+
+  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
+  hexedit-1.2.9.ebuild:
+  x86 stable
 
 *hexedit-1.2.9 (13 Apr 2004)
 
